--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>family club</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Montserrat:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/src/index.css">
 </head>
+
 <body class="page">
-    <h1>Тестирование</h1>
+    <header class="header">
+        <div class="header__wrapper-title">
+            <h1 class="header__title">family club</h1>
+        </div>
+        <div class="navigation-menu">
+            <ul class="navigation-menu__list-item">
+                <li><a>Главная</a></li>
+                <li><a>О нас</a></li>
+                <li><a>Услуги</a></li>
+                <li><a>Косметология</a></li>
+                <li><a>Статьи</a></li>
+                <li><a>Контакты</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
+
 </html>
