--- a/src/index.html
+++ b/src/index.html
@@ -8,26 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Montserrat:wght@400;500;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=GFS+Didot&family=Gloria+Hallelujah&family=Montserrat:wght@400;500;700&family=Raleway:wght@300;400;500;600&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/src/index.css">
+    <link rel="stylesheet" href="/src/style/index.css">
+    <link rel="stylesheet" href="/src/style/normalize.css">
 </head>
 
 <body class="page">
     <header class="header">
-        <div class="header__wrapper-title">
-            <h1 class="header__title">family club</h1>
-        </div>
-        <div class="navigation-menu">
-            <ul class="navigation-menu__list-item">
-                <li><a>Главная</a></li>
-                <li><a>О нас</a></li>
-                <li><a>Услуги</a></li>
-                <li><a>Косметология</a></li>
-                <li><a>Статьи</a></li>
-                <li><a>Контакты</a></li>
-            </ul>
-        </div>
+        <a class="header__logo" href="/">
+            Family club
+        </a>
+
     </header>
 </body>
 
