--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=GFS+Didot&family=Gloria+Hallelujah&family=Montserrat:wght@400;500;700&family=Raleway:wght@300;400;500;600&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/header.css">
     <link rel="stylesheet" href="./style/normalize.css">
 </head>
 
