add folder components pages and section contact to  index.html

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=GFS+Didot&family=Gloria+Hallelujah&family=Montserrat:wght@400;500;700&family=Raleway:wght@300;400;500;600&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/normalize.css">
 </head>
 
@@ -53,6 +54,18 @@
             </select>
         </div>
     </header>
+    <main>
+        <section class="contact">
+            <div class="contact-block-text">
+                <p class="contact-block-text-other">Our Expertise</p>
+                <p class="contact-block-text-main">Your Expression</p>
+                <a class="contact-block-text-btn" href="tel:+995322310421">Call now</a>
+            </div>
+            <div class="contact-img">
+                <img src="./images/bg-contacts.png" alt="bg-contacts">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
