create image plugin

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=GFS+Didot&family=Gloria+Hallelujah&family=Montserrat:wght@400;500;700&family=Raleway:wght@300;400;500;600&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./style/header.css">
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/normalize.css">
 </head>
 
 <body class="page">
@@ -49,8 +46,8 @@
                 </svg>
             </button>
             <select class="header-actions-select">
-                <option><img src="./images/icons-select-eng.png">Eng</option>
-                <option><img src="./images/icons-select-geo.png">ქარ</option>
+                <option>&#127468;&#127466;eng</option>
+                <option>&#127468;&#127466;ქარ</option>
             </select>
         </div>
     </header>
