--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=GFS+Didot&family=Gloria+Hallelujah&family=Montserrat:wght@400;500;700&family=Raleway:wght@300;400;500;600&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/normalize.css">
 </head>
 
 <body class="page">
@@ -45,21 +48,42 @@
                         d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z" />
                 </svg>
             </button>
-            <select class="header-actions-select">
-                <option>&#127468;&#127466;eng</option>
-                <option>&#127468;&#127466;ქარ</option>
+            <select class="header-actions-select" title="language changes">
+                <option>&#x1F1EC;&#x1F1EA;</option>
+                <option>&#x1F1EC;&#x1F1E7;</option>
             </select>
         </div>
     </header>
     <main>
-        <section class="contact">
-            <div class="contact-block-text">
-                <p class="contact-block-text-other">Our Expertise</p>
-                <p class="contact-block-text-main">Your Expression</p>
-                <a class="contact-block-text-btn" href="tel:+995322310421">Call now</a>
+        <section class="banner">
+            <!-- тег ниже для сео оптимизации  -->
+            <h1 class="visually-hidden">beauty salon in tbilisi</h1>
+            <div class="banner-block-text">
+                <h1 class="banner-block-text-other">Our Expertise</h1>
+                <h2 class="banner-block-text-main">Your Expression</h2>
+                <a class="banner-block-text-btn" href="tel:+995322310421">Call now</a>
             </div>
-            <div class="contact-img">
-                <img src="./images/bg-contacts.png" alt="bg-contacts">
+            <div class="banner-img">
+                <img src="./images/bg-contacts.png" alt="bg-banners">
+            </div>
+        </section>
+        <!-- секция О НАС ---------------------->
+        <section class="about">
+            <div class="about__banner">
+                <img class="about__banner-img" src="./images/image-section-about.png" alt="banners-about">
+            </div>
+            <div class="about__block">
+                <h2 class="about__block-title">About us</h2>
+                <p class="about__block-text">Our carefully chosen and highly trained staff is here to exceed your
+                    expectations. The same goes for our elegant salon space – dedicated to guest comfort – and our
+                    devotion to innovation and artistry. We’re focused on making your day and continually raising the
+                    bar.<br>
+                    <br>
+                    Centrally located in the City of Temecula, Salon Charlotte Hair offers a variety of hair care,
+                    nail care, and skin care services that are delivered with kindness and professionalism. Family-owned
+                    and operated for over four decades, the atmosphere is warm, inviting, and professional. Salon
+                    Charlotte Hair strives to deliver timely, professional services with a flare for style and energy.
+                </p>
             </div>
         </section>
     </main>
