third block html and style and media

--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,25 @@
                 </p>
             </div>
         </section>
+
+        <section class="choose">
+            <div class="choose__block">
+                <h2 class="about__block-title">Choose yours</h2>
+                <p class="about__block-text">Our team is extremely talented and passionate. They are also among the most
+                    highly trained and educated technicians in the industry. This ensures each and every one of our
+                    clients receives world-class service – each and every time. We want your experience to be unlike any
+                    other.
+                </p>
+                <div class="choose__carousel-block">
+                    <img class="choose__carousel-image" src="./images/carousel-1.png">
+                    <img class="choose__carousel-image" src="./images/carousel-2.png">
+                    <img class="choose__carousel-image" src="./images/carousel-3.png">
+                </div>
+            </div>
+            <div class="about__banner">
+                <img class="about__banner-img" src="./images/image-section-choose.png" alt="banners-about">
+            </div>
+        </section>
     </main>
 </body>
 
